src/Components/Board/Board.module.css
.wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 20px;
}
.container {
  height: 500px;
  width: 500px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;

  grid-gap: 15px;
}

.box {
  background-color: #24353f;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  box-shadow: 0px 8px 0px #132027;
}

.counterX {
  font-size: 100px;
  font-weight: 800;
  font-family: sans-serif;
  color: #61c1ba;

  padding: 0px;
  margin: 0px;
}
.counterO {
  font-size: 100px;
  font-weight: 800;
  font-family: sans-serif;
  color: #C9A963;

  padding: 0px;
  margin: 0px;
}

